2005-02-01  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: 
	* gtkdoc-mktmpl.in: patch from Brian Cameron to support stability
	levels.

	* gtkdoc-mkdb.in (OutputFunction): 
	* gtkdoc-mktmpl.in (OutputDeclaration): 
	* gtkdoc-common.pl.in (ParseStructDeclaration): patch from Roger Leigh
	to add support for the "restrict" keyword.

	* gtkdoc-scan.in (ScanHeader): patch from Roger Leigh to add support
	for "unsigned" to one of the regexps.

2005-01-31  Damon Chaplin  <damon@gnome.org>

	* gtk-doc.make (scan-build.stamp): added "2>&1" to grep command to
	ignore any errors.

	* gtkdoc-mkdb.in: patch from Stefan Kost to not add '<' '>' around
	include files that already have '"' '"' around them, and to try to
	gather more information about undocumented symbols. #164462.

2005-01-28  Damon Chaplin  <damon@gnome.org>

	* gtk-doc.make: use dist-hook rather than EXTRA_DIST to copy the
	$(DOC_MODULE).types file over, so we can skip this if it doesn't exist.
	#156300.

2005-01-12  Damon Chaplin  <damon@gnome.org>

	* README: patch from Stefan Kost to mention GObject classes
	and describe the transformation process to XML/SGML and HTML,
	and to mention Devhelp.

2005-01-09  Damon Chaplin  <damon@gnome.org>

	* Released 1.3.

2005-01-09  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (MergeSourceDocumentation): output better warnings
	using the type information. Patch from Stefan Kost. #161979

	* gtkdoc-scan.in (ScanHeader): support "typedef struct a *b;". Fixes
	last part of #156318.

	* gtkdoc-common.pl.in (ParseStructDeclaration): return an empty array
	for forward struct declarations. Part of #156318.

	* gtkdoc-mktmpl.in: 
	* gtkdoc-mkdb.in: updated a few of the warnings to make them a bit
	easier to understand.

2004-11-22  James Henstridge  <james@jamesh.id.au>

	* acconfig.h: remove file, since we don't have a config.h

	* configure.in: make sure $ACLOCAL_FLAGS is passed to aclocal on a
	rebuild.
